--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="menu_calendar">Calendar</string>
     <string name="menu_tasks">Tasks</string>
     <string name="task">Your tasks for</string>
+    <string name="sign_out_button">Sign Out </string>
 </resources>
