--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="forgot_password"><u>Forgot Password?</u></string>
     <string name="sign_in_button"><u>Sign In</u></string>
     <string name="sign_up_button"><u>Sign Up</u></string>
+    <string name="user_settings">Settings</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
