--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_calendar">Calendar</string>
     <string name="menu_tasks">Tasks</string>
+    <string name="menu_notes">Notes</string>
 
     <string name="task">Your tasks for</string>
     <string name="add_task">+ ADD TASK</string>
@@ -25,4 +26,5 @@
     <string name="user_settings">Settings</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
